try to fix the rounded corner on mobile.

--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ p {
         max-width: 360px;
         background-color: var(--bright-orange);
         padding: var(--padding-size);
-        border-radius: none;
+        border-radius: initial;
         border-top-left-radius: var(--corner-radius);
         border-top-right-radius: var(--corner-radius);
     }
@@ -176,7 +176,7 @@ p {
         max-width: 360px;
         background-color: var(--very-dark-cyan);
         padding: var(--padding-size);
-        border-radius: none;
+        border-radius: initial;
         border-bottom-left-radius: var(--corner-radius);
         border-bottom-right-radius: var(--corner-radius);
     }
